--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+
+  "homepage": "https://<ph1lpz>.github.io/<Todo>",
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1"
@@ -27,5 +33,4 @@
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
- 
 }
