change the json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
 
-  "homepage": "https://<ph1lpz>.github.io/<Todo>",
+  "homepage": "https://ph1lpz.github.io/Todo/",
 
   "scripts": {
     "dev": "vite",
